test-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpd-app-deployment
  labels:
    name: httpd-app-deployment
    app: demo-httpd-app
spec:
  replicas: 2
  selector:
    matchLabels:
      name: httpd-app-pod
  template:
    metadata:
      name: httpd-app-pod
      labels:
        app: demo-httpd-app
    spec:
      containers:
        - name: httpd-app
          image: httpd
          ports:
            - containerPort: 80

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-app-deployment
  labels:
    name: nginx-app-deployment
    app: demo-nginx-app
spec:
  replicas: 2
  selector:
    matchLabels:
      name: nginx-app-pod
  template:
    metadata:
      name: nginx-app-pod
      labels:
        app: demo-nginx-app
    spec:
      containers:
        - name: nginx-app
          image: nginx
          ports:
            - containerPort: 80
